# genesis

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  conanfile.txt  genesis.sln
CMakeHelpers/: addSeadexOptions.cmake  addSpecificFlags.cmake  functions.cmake  functionsAddCompilerFlags.cmake
cfg/jenkins/: Jenkinsfile
cfg/jenkins/linux/: build.sh  clang_build.sh  clang_set_compiler.py  conan.sh  conan_clang_profiles.py  conan_profiles.py  get_essentials_from_conan.sh  lib_path_extractor.py
cfg/jenkins/windows/: conan_profiles.py  conan_recipe_upload.bat  conan_stage.bat  copy_conan_essentials.py  genesis_deploy.bat
conan/seadex-genesis/all/: conandata.yml  conanfile.py
conan/seadex-genesis/all/test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
docs/: generateAll.bat  generateAll.sh  generate_doxygen.py
docs/asciidoc_base_generator/: how_to_start.txt  install_asciidoctor_gem.bat  install_asciidoctor_gem.sh  install_node_modules.bat  install_node_modules.sh  package-lock.json  toHtml.js  toPdf.bat  toPdf.sh
docs/asciidoc_base_generator/scripts/: asciidoctor.css
docs/asciidoc_base_generator/themes/: basic-theme.yml
docs/sources/: Building_genesis.adoc  CMake.adoc  Changelog.adoc  Commercial_support.adoc  Condition_block.adoc  Contact_and_support.adoc  Dependencies.adoc  Documentation.adoc  Downloads.adoc  Escape_sequeces.adoc  Examples.adoc  Features.adoc  HTML_page_generator_example.adoc  License.adoc  Loop_block.adoc  Microsoft_Visual_Studio.adoc  Recipe_callback.adoc  Reference.adoc  Show_your_appreciation.adoc  Steps_and_blocks.adoc  Switch_block.adoc  Template_block.adoc  Text_step.adoc  Variable_step.adoc  cover_page.adoc  index.adoc
docs/sources/doxygen/: Doxyfile
docs/sources/scripts/: asciidoctor.css
docs/sources/themes/: basic-theme.yml
examples/html_page_generator/: CMakeLists.txt  city.hpp  config.cpp  config.hpp  country.hpp  html_generator_grammar.cpp  html_generator_grammar.hpp  html_page_generator.vcxproj  html_page_generator.vcxproj.filters  main.cpp  recipe_callback_impl.cpp  recipe_callback_impl.hpp
examples/html_page_generator/templates/: city_type.gtpl  countries.gtpl  country_table.gtpl
genesis/: CMakeLists.txt  changelog.txt  genesis.vcxproj  genesis.vcxproj.filters
genesis/include/: build_number.hpp  condition_block.hpp  condition_modifier.hpp  file_reader.hpp  file_writer.hpp  genesis_exception.hpp  grammar.hpp  loop_block.hpp  messages.hpp  recipe.hpp  recipe_block.hpp  recipe_callback.hpp  recipe_step.hpp  switch_block.hpp  template_block.hpp  text_step.hpp  variable_step.hpp  version.hpp
genesis/source/: condition_block.cpp  condition_modifier.cpp  file_reader.cpp  file_writer.cpp  grammar.cpp  loop_block.cpp  messages.cpp  recipe.cpp  recipe_block.cpp  switch_block.cpp  template_block.cpp  text_step.cpp  variable_step.cpp  version.cpp
